PS Update D24-FEB (Fixed shop footer & others)

--- a/index.html
+++ b/index.html
@@ -735,10 +735,10 @@
             <div class="accordion__content rte" id="accordion-collapser-2">
               <ul class="accordion-ul">
                 <li class="accordion-li">
-                  <a href="https://misionessabor.com/pages/about.html">Nosotros</a>
+                  <a href="https://misionessabor.com/pages/about">Nosotros</a>
                 </li>
                 <li class="accordion-li">
-                  <a href="https://misionessabor.com/pages/contact.html">Información de Contacto</a>
+                  <a href="https://misionessabor.com/pages/contact">Información de Contacto</a>
                 </li>
               </ul>
             </div>
