--- a/policies/refund-policy.html
+++ b/policies/refund-policy.html
@@ -162,8 +162,7 @@
     <div class="gp-footer">
       <div class="column logo">
         <a href="https://misionessabor.com">
-          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor"
-            class="footer-logo">
+          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo">
         </a>
         <div class="social-wrapper">
           <a href="https://www.instagram.com/misiones_sabor" target="_blank" aria-describedby="a11y-external-message">
@@ -184,12 +183,12 @@
             <svg width="25" height="25" aria-hidden="true" focusable="false" role="presentation" class="icon icon-vimeo"
               viewBox="0 0 448 512">
               <path fill="#ffffff" d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 
-                        224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 
-                        82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 
-                        184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 
-                        1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 
-                        0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 
-                        4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z">
+                      224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 
+                      82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 
+                      184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 
+                      1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 
+                      0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 
+                      4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z">
               </path>
             </svg>
           </a>
@@ -248,10 +247,10 @@
             <div class="accordion__content rte" id="accordion-collapser-1">
               <ul class="accordion-ul">
                 <li class="accordion-li">
-                  <a href="https://misionessabor.com/collections/all.html">Hierbas</a>
+                  <a href="https://misionessabor.com/pages/shop.com">Hierbas</a>
                 </li>
                 <li class="accordion-li">
-                  <a href="https://misionessabor.com/pages/wholesale.html">Venta al por Mayor</a>
+                  <a href="https://misionessabor.com/pages/wholesale.com">Venta al por Mayor</a>
                 </li>
               </ul>
             </div>
@@ -273,10 +272,10 @@
             <div class="accordion__content rte" id="accordion-collapser-2">
               <ul class="accordion-ul">
                 <li class="accordion-li">
-                  <a href="https://misionessabor.com/pages/about.html">Nosotros</a>
+                  <a href="https://misionessabor.com/pages/about">Nosotros</a>
                 </li>
                 <li class="accordion-li">
-                  <a href="https://misionessabor.com/pages/contact.html">Información de Contacto</a>
+                  <a href="https://misionessabor.com/pages/contact">Información de Contacto</a>
                 </li>
               </ul>
             </div>
@@ -317,8 +316,8 @@
       <div class="column dropdown footer-contact closed">
         <h3>ATENCIÓN AL CLIENTE</h3>
         <ul>
-          <li><a href="https://wa.me/5493765095625" target="_blank" aria-describedby="a11y-external-message">+54 9 3765-095625</a></li>
-          <li><a href="mailto:ventas@misionessabor.com"
+          <li class="accordion-li"><a href="https://wa.me/5493765095625" target="_blank" aria-describedby="a11y-external-message">+54 9 3765-095625</a></li>
+          <li class="accordion-li"><a href="mailto:ventas@misionessabor.com"
               aria-describedby="a11y-external-message">ventas@misionessabor.com</a></li>
         </ul>
         <p class="address">
@@ -353,34 +352,6 @@
               <path fill="#F79E1B"
                 d="M77.835 30.337c0 6.608-3.7 12.637-9.527 15.525-5.828 2.887-12.761 2.128-17.855-1.957 4.082-3.272 6.466-8.275 6.466-13.57 0-5.296-2.384-10.299-6.466-13.571 5.094-4.085 12.027-4.844 17.855-1.956 5.828 2.887 9.527 8.916 9.527 15.524v.005zm-1.617 10.935v-.758h.221v-.156h-.56v.156h.24v.758h.1zm1.086 0v-.914h-.169l-.197.653-.198-.653h-.15v.914h.122v-.686l.183.595h.127l.184-.595v.693l.098-.007z" />
             </g>
-          </g>
-        </svg>
-        <!--PAYPAL-->
-        <svg xmlns="http://www.w3.org/2000/svg" width="58" height="42" viewBox="0 0 100 60">
-          <g fill="none" fill-rule="evenodd">
-            <path fill="#FFF" d="M0 0h100v60H0z" />
-            <g fill-rule="nonzero">
-              <path fill="#253B80"
-                d="M39.677 23.572h-4.688a.649.649 0 0 0-.644.544l-1.896 11.879a.385.385 0 0 0 .387.445h2.236a.64.64 0 0 0 .637-.543l.51-3.204a.645.645 0 0 1 .638-.538h1.487c3.086 0 4.87-1.478 5.33-4.401.204-1.277.008-2.285-.604-2.99-.663-.774-1.844-1.177-3.417-1.177l.024-.015zm.54 4.339c-.254 1.663-1.54 1.663-2.784 1.663h-.707l.496-3.106a.377.377 0 0 1 .383-.319h.323c.841 0 1.64 0 2.057.479.246.286.323.714.23 1.294l.003-.011zm13.473-.054h-2.244a.39.39 0 0 0-.387.326l-.1.621-.152-.226c-.485-.698-1.564-.93-2.652-.93-2.474 0-4.599 1.857-5.007 4.461-.212 1.3.094 2.543.842 3.41.688.796 1.666 1.128 2.83 1.128 1.998 0 3.111-1.27 3.111-1.27l-.093.616a.388.388 0 0 0 .382.447h2.023a.65.65 0 0 0 .646-.543l1.216-7.594a.383.383 0 0 0-.383-.445l-.032-.001zm-3.128 4.318c-.218 1.268-1.236 2.118-2.533 2.118-.653 0-1.173-.207-1.508-.598-.34-.389-.459-.94-.357-1.558.204-1.26 1.233-2.142 2.516-2.142.638 0 1.156.21 1.496.605.34.394.476.949.383 1.57l.003.005zm15.085-4.318H63.39a.655.655 0 0 0-.539.283l-3.11 4.536-1.318-4.351a.647.647 0 0 0-.62-.454h-2.22c-.263 0-.45.26-.365.513l2.49 7.207-2.337 3.259a.39.39 0 0 0 .323.613h2.253c.212 0 .416-.1.535-.277l7.489-10.71c.178-.252-.009-.605-.323-.605l-.001-.014z" />
-              <path fill="#179BD7"
-                d="M73.115 23.572h-4.688c-.32 0-.593.23-.643.544l-1.896 11.879a.385.385 0 0 0 .385.445h2.405a.45.45 0 0 0 .45-.38l.539-3.368a.642.642 0 0 1 .637-.543h1.48c3.085 0 4.87-1.477 5.337-4.404.204-1.277.009-2.285-.603-2.99-.672-.773-1.853-1.176-3.417-1.176l.014-.007zm.542 4.339c-.255 1.663-1.541 1.663-2.785 1.663h-.707l.497-3.106a.385.385 0 0 1 .385-.319h.325c.846 0 1.645 0 2.057.479.246.286.321.714.228 1.294v-.011zm13.472-.054h-2.244a.388.388 0 0 0-.386.326l-.102.621-.161-.226c-.485-.698-1.573-.93-2.652-.93-2.482 0-4.599 1.857-5.015 4.461-.213 1.3.085 2.543.833 3.41.68.796 1.657 1.128 2.822 1.128 1.997 0 3.11-1.27 3.11-1.27l-.101.616a.384.384 0 0 0 .382.447h2.023c.315 0 .587-.23.638-.543l1.215-7.594a.394.394 0 0 0-.39-.445l.028-.001zM84 32.175c-.216 1.268-1.235 2.118-2.533 2.118-.65 0-1.173-.207-1.508-.598-.331-.389-.456-.94-.351-1.558a2.508 2.508 0 0 1 2.516-2.142c.637 0 1.156.21 1.496.605.344.394.479.949.38 1.57v.005zm5.776-8.278-1.924 12.098a.386.386 0 0 0 .385.445h1.934a.65.65 0 0 0 .646-.543l1.896-11.88a.382.382 0 0 0-.383-.445h-2.167a.386.386 0 0 0-.383.326h-.004z" />
-              <path fill="#253B80"
-                d="m12.981 38.748.357-2.25-.797-.018H8.728l2.65-16.605a.216.216 0 0 1 .216-.18h6.428c2.142 0 3.613.436 4.378 1.304.365.407.595.832.705 1.299.12.49.12 1.075.009 1.79l-.009.053v.458l.366.201c.306.16.544.342.73.55.307.348.51.79.596 1.313.093.54.06 1.18-.085 1.905-.162.84-.425 1.563-.79 2.16a4.389 4.389 0 0 1-1.25 1.36 5.207 5.207 0 0 1-1.683.756c-.62.16-1.326.244-2.108.244h-.502c-.357 0-.705.126-.977.36-.272.236-.45.555-.51.9l-.034.201-.63 3.965-.025.151c-.008.05-.017.076-.034.084a.097.097 0 0 1-.068.025h-3.12v-.026z" />
-              <path fill="#179BD7"
-                d="M23.799 24.194c-.019.12-.04.245-.066.373-.848 4.3-3.748 5.787-7.454 5.787h-1.887a.914.914 0 0 0-.904.768l-.966 6.056-.274 1.716c-.046.29.18.552.476.552h3.346a.803.803 0 0 0 .796-.67l.034-.169.629-3.951.04-.217a.802.802 0 0 1 .795-.672h.5c3.247 0 5.78-1.302 6.528-5.065.314-1.57.153-2.885-.672-3.808a3.082 3.082 0 0 0-.918-.697l-.003-.003z" />
-              <path fill="#222D65"
-                d="M22.912 23.844a6.442 6.442 0 0 0-.824-.18 10.54 10.54 0 0 0-1.664-.12h-5.04a.801.801 0 0 0-.797.663l-1.071 6.712-.034.193a.91.91 0 0 1 .9-.773h1.888c3.706 0 6.604-1.487 7.454-5.787.026-.126.043-.252.06-.378a4.325 4.325 0 0 0-.697-.294l-.187-.06.012.024z" />
-              <path fill="#253B80"
-                d="M14.59 24.216a.796.796 0 0 1 .787-.672h5.04c.596 0 1.148.039 1.658.12a6.584 6.584 0 0 1 .824.18l.188.06c.246.081.476.178.697.29.246-1.59-.009-2.671-.876-3.653C21.965 19.462 20.24 19 18.021 19h-6.428a.913.913 0 0 0-.906.768L8.009 36.543a.548.548 0 0 0 .543.632h3.97l.998-6.25 1.068-6.709h.002z" />
-            </g>
-          </g>
-        </svg>
-        <!--BOLETO-->
-        <svg xmlns="http://www.w3.org/2000/svg" width="58" height="42" viewBox="0 0 100 60">
-          <g fill="none" fill-rule="evenodd">
-            <path fill="#FFF" d="M0 0h100v60H0z" />
-            <path fill="#221F1F" fill-rule="nonzero"
-              d="M24.906 12.657h1.652V27.53h-1.652V12.657zm-4.318 0h1.652V27.53h-1.652V12.657zm17.124 0h4.486V27.53h-4.486V12.657zm22.927 0h2.242V27.53H60.64V12.657zm5.485 0h2.242V27.53h-2.242V12.657zm8.977 0h2.882V27.53H75.1V12.657zm-3.245 0h.932V27.53h-.932V12.657zm-15.078 0h.932V27.53h-.932V12.657zm-1.994 0h.932V27.53h-.932V12.657zm-6.48 0h.932V27.53h-.933V12.657zm-14.892 0h.932V27.53h-.932V12.657zm-2.745 0h1.73V27.53h-1.73V12.657zm-10.08 33.897V31.257h5.738c1.168 0 2.103.154 2.81.463.706.31 1.256.786 1.655 1.431.401.64.602 1.313.602 2.02 0 .65-.177 1.267-.531 1.843a3.786 3.786 0 0 1-1.603 1.4c.925.272 1.638.735 2.131 1.389.498.652.748 1.424.748 2.314 0 .72-.153 1.386-.455 2a3.882 3.882 0 0 1-1.121 1.424c-.446.33-1.003.583-1.673.756-.81.185-1.639.272-2.469.257h-5.834.003zm2.03-8.867h3.307c.896 0 1.54-.061 1.928-.177a2.131 2.131 0 0 0 1.163-.765c.272-.392.41-.862.392-1.339a2.433 2.433 0 0 0-.366-1.341 1.842 1.842 0 0 0-1.043-.798c-.453-.142-1.227-.213-2.325-.213h-3.056v4.636-.003zm0 7.072h3.81c.653 0 1.113-.026 1.38-.075.462-.083.854-.222 1.168-.416.328-.212.594-.507.772-.855.203-.373.302-.805.302-1.291 0-.574-.146-1.068-.441-1.493a2.308 2.308 0 0 0-1.218-.89c-.517-.17-1.263-.257-2.235-.257h-3.538v5.277zm11.359-3.75c0-2.047.569-3.563 1.71-4.55.952-.819 2.115-1.228 3.484-1.228 1.52 0 2.766.499 3.734 1.495.965.994 1.449 2.37 1.449 4.128 0 1.424-.213 2.543-.64 3.358a4.533 4.533 0 0 1-1.869 1.9 5.407 5.407 0 0 1-2.671.676c-1.55 0-2.804-.496-3.762-1.488-.958-.994-1.435-2.425-1.435-4.29zm1.921.005c0 1.417.31 2.48.93 3.181.623.706 1.402 1.058 2.346 1.058.932 0 1.708-.352 2.331-1.06.619-.709.93-1.788.93-3.238 0-1.367-.314-2.404-.937-3.105a2.975 2.975 0 0 0-2.324-1.058c-.944 0-1.723.35-2.346 1.051-.619.701-.93 1.76-.93 3.174v-.003zm10.615 5.54V31.257h1.879v15.297h-1.879zm12.345-3.59 1.943.258c-.302 1.129-.869 2.007-1.695 2.63-.826.624-1.878.938-3.165.938-1.616 0-2.895-.498-3.844-1.495-.946-.994-1.42-2.392-1.42-4.191 0-1.858.476-3.303 1.434-4.33.958-1.03 2.2-1.543 3.727-1.543 1.477 0 2.683.503 3.62 1.51.937 1.008 1.406 2.424 1.406 4.25l-.009.498h-8.253c.07 1.214.413 2.146 1.031 2.791a3.067 3.067 0 0 0 2.31.968c.688 0 1.275-.182 1.759-.545.489-.364.87-.945 1.156-1.74v.002zm-6.15-3.012h6.172c-.083-.933-.321-1.632-.708-2.097a2.87 2.87 0 0 0-2.32-1.086c-.862 0-1.584.288-2.171.864-.583.576-.909 1.35-.973 2.319zm14.547 4.925.258 1.66a6.96 6.96 0 0 1-1.414.168c-.68 0-1.206-.106-1.584-.323-.373-.218-.637-.499-.79-.85-.154-.352-.23-1.094-.23-2.222v-6.388h-1.387V35.47h1.388v-2.742l1.878-1.128v3.87h1.879v1.452h-1.879v6.496c0 .539.033.883.1 1.037a.765.765 0 0 0 .32.366c.198.1.419.147.64.134l.819-.075.002-.003zm1.15-3.867c0-2.048.568-3.564 1.71-4.55.952-.82 2.115-1.229 3.484-1.229 1.52 0 2.766.499 3.733 1.495.966.994 1.45 2.37 1.45 4.128 0 1.424-.213 2.543-.64 3.358a4.533 4.533 0 0 1-1.87 1.9 5.407 5.407 0 0 1-2.67.676c-1.551 0-2.804-.496-3.763-1.488-.958-.994-1.434-2.425-1.434-4.29zm1.92.004c0 1.417.31 2.48.93 3.181.624.706 1.402 1.058 2.346 1.058.933 0 1.709-.352 2.332-1.06.618-.709.93-1.788.93-3.238 0-1.367-.314-2.404-.937-3.105a2.975 2.975 0 0 0-2.325-1.058c-.944 0-1.722.35-2.346 1.051-.618.701-.93 1.76-.93 3.174v-.003z" />
           </g>
         </svg>
         <!--AMERICAN EXPRESS-->
@@ -514,7 +485,7 @@
         </svg>
       </div>
     </div>
-  </footer>
+</footer>
   <script src="https://misionessabor.com/scripts/bootstrap.min.js"></script>
 </body>
 </html>
