MS Update D24-FEB (Fixed Footer Issues)

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
             </svg>
           </a>
           <a href="https://wa.me/5493765095625" target="_blank" aria-describedby="a11y-external-message">
-            <svg width="25" height="25" aria-hidden="true" focusable="false" role="presentation" class="icon icon-vimeo"
+            <svg width="25" height="25" aria-hidden="true" focusable="false" role="presentation"
               viewBox="0 0 448 512">
               <path fill="#ffffff" d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 
                       224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 
