MS-UPDATE 27-02 (Carrousel Controls)

--- a/index.html
+++ b/index.html
@@ -183,20 +183,26 @@
             <!-- Controls -->
             <div class="glide__arrows" data-glide-el="controls">
               <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
-                <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" fill="black" 
+                <svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 96 960 960" width="30">
+                  <path d="M480 896 160 576l320-320 42 42-248 248h526v60H274l248 248-42 42Z"/>
+                </svg>
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" fill="black" 
                   viewBox="0 0 384 512">
                   <path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 
                   0s12.5-32.8 0-45.3L109.3 256 278.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 
                   0l-192 192z"/>
-                </svg>
+                </svg> -->
               </button>
               <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
-                <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" fill="black" 
+                <svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 96 960 960" width="30">
+                  <path d="m480 896-42-43 247-247H160v-60h525L438 299l42-43 320 320-320 320Z"/>
+                </svg>
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" fill="black" 
                     viewBox="0 0 384 512">
                     <path d="M342.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 
                     0s-12.5-32.8 0-45.3L274.7 256 105.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 
                     0l192 192z"/>
-                </svg>
+                </svg> -->
               </button>
             </div>  
           </div>
