MS Update (hierbas link shop.com & wholesale.com)

--- a/products/isipo-mil-hombres.html
+++ b/products/isipo-mil-hombres.html
@@ -334,10 +334,10 @@
               <div class="accordion__content rte" id="accordion-collapser-1">
                 <ul class="accordion-ul">
                   <li class="accordion-li">
-                    <a href="https://misionessabor.com/pages/shop.com">Hierbas</a>
+                    <a href="https://misionessabor.com/pages/shop">Hierbas</a>
                   </li>
                   <li class="accordion-li">
-                    <a href="https://misionessabor.com/pages/wholesale.com">Venta al por Mayor</a>
+                    <a href="https://misionessabor.com/pages/wholesale">Venta al por Mayor</a>
                   </li>
                 </ul>
               </div>
