MS Update (Policies meta & GGANY meta)

--- a/pages/about.html
+++ b/pages/about.html
@@ -75,7 +75,12 @@
     <meta name="msapplication-TileImage" content="https://misionessabor.com/images/icons/favicons/mstile-144x144.png">
     <meta name="msapplication-config" content="https://misionessabor.com/images/icons/favicons/browserconfig.xml">
     <!--==========================================================================-->
-    <!--==========================================================================-->    
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R90916N8NC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-R90916N8NC');
+  </script>  
+  <!--==========================================================================--> 
 </head>
 <body>
     <header>
