--- a/pages/wholesale.html
+++ b/pages/wholesale.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--============================-->
+    <!--===       <STYLES>       ===-->       
     <link rel="stylesheet" href="https://misionessabor.com/styles/ms.css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/bootstrap.min.css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/announcement-bar.css" type="text/css">
@@ -75,7 +77,12 @@
     <meta name="msapplication-TileImage" content="https://misionessabor.com/images/icons/favicons/mstile-144x144.png">
     <meta name="msapplication-config" content="https://misionessabor.com/images/icons/favicons/browserconfig.xml">
     <!--==========================================================================-->
-    <!--==========================================================================-->  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R90916N8NC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-R90916N8NC');
+  </script>  
+  <!--==========================================================================-->  
 </head>
 <body>
     <header>
