MS Update (Fixed PSI Web Errors)
Co-authored-by: Roger Duncke <RogerDuncke@users.noreply.github.com>
Co-authored-by: Kevinduncke@gmail.com <Kevinduncke@gmail.com>
Co-authored-by: Kevin Duncke <kevinduncke@gmail.com>

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="https://misionessabor.com/styles/banner.css" type="text/css">
   <link rel="stylesheet" href="https://misionessabor.com/styles/featured-products.css" type="text/css">
   <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css" type="text/css">
-  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
   <link rel="stylesheet" href="https://misionessabor.com/res/node_modules/@glidejs/glide/dist/css/glide.core.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -95,7 +94,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid cont-navbar">
         <a aria-label="Misiones Sabor" class="navbar-brand" href="https://misionessabor.com">
-          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo">
+          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo" width="93.05" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -182,7 +181,7 @@
             <h2 class="ms-main-prd-h2">Productos Destacados</h2>
             <!-- Controls -->
             <div id="ms-main-glide" class="glide__arrows" data-glide-el="controls">
-              <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+              <button class="glide__arrow glide__arrow--left" data-glide-dir="<"  aria-label="hacia la izquierda">
                 <svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 96 960 960" width="30">
                   <path d="M480 896 160 576l320-320 42 42-248 248h526v60H274l248 248-42 42Z"/>
                 </svg>
@@ -193,7 +192,7 @@
                   0l-192 192z"/>
                 </svg> -->
               </button>
-              <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+              <button class="glide__arrow glide__arrow--right" data-glide-dir=">"  aria-label="hacia la derecha">
                 <svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 96 960 960" width="30">
                   <path d="m480 896-42-43 247-247H160v-60h525L438 299l42-43 320 320-320 320Z"/>
                 </svg>
@@ -631,7 +630,7 @@
     <div class="gp-footer">
       <div class="column logo">
         <a aria-label="Misiones Sabor Logo" href="https://misionessabor.com">
-          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo">
+          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo" width="175" height="94.02">
         </a>
         <div class="social-wrapper">
           <a aria-label="Instagram de Misiones Sabor" href="https://www.instagram.com/misiones_sabor" target="_blank" aria-describedby="a11y-external-message">
