--- a/pages/shop.html
+++ b/pages/shop.html
@@ -91,7 +91,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid cont-navbar">
         <a aria-label="Misiones Sabor" class="navbar-brand" href="https://misionessabor.com">
-          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo">
+          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo" width="93.05" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -100,10 +100,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a aria-label="Inicio" class="nav-link active" aria-current="page" href="https://misionessabor.com">Inicio</a>
+              <a aria-label="Inicio" class="nav-link" aria-current="page" href="https://misionessabor.com">Inicio</a>
             </li>
             <li class="nav-item">
-              <a aria-label="Productos" class="nav-link" href="https://misionessabor.com/pages/shop">Productos</a>
+              <a aria-label="Productos" class="nav-link active" href="https://misionessabor.com/pages/shop">Productos</a>
             </li>
             <li class="nav-item">
               <a aria-label="Nosotros" class="nav-link" href="https://misionessabor.com/pages/about">Nosotros</a>
@@ -398,7 +398,7 @@
       <div class="gp-footer">
         <div class="column logo">
           <a aria-label="Misiones Sabor Logo" href="https://misionessabor.com">
-            <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo">
+            <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo" width="175" height="94.02">
           </a>
           <div class="social-wrapper">
             <a aria-label="Instagram de Misiones Sabor" href="https://www.instagram.com/misiones_sabor" target="_blank" aria-describedby="a11y-external-message">
