--- a/policies/privacy-policy.html
+++ b/policies/privacy-policy.html
@@ -17,7 +17,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
+  
   <!--============================-->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
@@ -98,7 +98,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid cont-navbar">
         <a aria-label="Misiones Sabor" class="navbar-brand" href="https://misionessabor.com">
-          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo">
+          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo" width="93.05" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -184,7 +184,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Información Personal que Recopilamos" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Información Personal que Recopilamos
                             </h2>
@@ -254,7 +254,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="¿Cómo usamos su información personal?" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 ¿Cómo usamos su información personal?
                             </h2>
@@ -296,7 +296,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Compartir su Información Personal" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Compartir su Información Personal
                             </h2>
@@ -335,7 +335,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Publicidad Conductual"class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Publicidad Conductual
                             </h2>
@@ -385,7 +385,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="No Rastrear" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 No Rastrear
                             </h2>
@@ -403,7 +403,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Sus Derechos" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sus Derechos
                             </h2>
@@ -440,7 +440,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Retención de Datos" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Retención de Datos
                             </h2>
@@ -458,7 +458,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Cambios" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Cambios
                             </h2>
@@ -476,7 +476,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Edad Mínima de Uso" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Edad Minima de Uso
                             </h2>
@@ -492,7 +492,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Contáctenos" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Contáctenos
                             </h2>
@@ -520,7 +520,7 @@
       <div class="gp-footer">
         <div class="column logo">
           <a aria-label="Misiones Sabor Logo" href="https://misionessabor.com">
-            <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo">
+            <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo" width="175" height="94.02">
           </a>
           <div class="social-wrapper">
             <a aria-label="Instagram de Misiones Sabor" href="https://www.instagram.com/misiones_sabor" target="_blank" aria-describedby="a11y-external-message">
