--- a/policies/terms-of-service.html
+++ b/policies/terms-of-service.html
@@ -17,7 +17,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
+  
   <!--============================-->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
@@ -98,7 +98,7 @@
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid cont-navbar">
             <a aria-label="Misiones Sabor" class="navbar-brand" href="https://misionessabor.com">
-              <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo">
+              <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo" width="93.05" height="50">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -232,7 +232,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Términos de la tienda en línea" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 1 | Términos de la tienda en línea
                             </h2>
@@ -272,7 +272,7 @@
 
                     <a aria-label="Condiciones Generales" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 2 | Condiciones Generales
                             </h2>
@@ -321,7 +321,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Exactitud, Exhaustividad y Actualidad de la Información" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 3 | Exactitud, Exhaustividad y Actualidad de la Información
                             </h2>
@@ -347,7 +347,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Modificaciones en el servicio y precios" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 4 | Modificaciónes en el servicio y precios
                             </h2>
@@ -371,7 +371,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Productos o Servicios" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 5 | Productos o Servicios
                             </h2>
@@ -430,7 +430,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Precisión de la facturación y la información de la cuenta" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 6 | Precisión de la facturación y la información de la cuenta.
                             </h2>
@@ -480,7 +480,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Herramientas Opcionales" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 7 | Herramientas Opcionales
                             </h2>
@@ -524,7 +524,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Enlaces de Terceros" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 8 | Enlaces de Terceros
                             </h2>
@@ -566,7 +566,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Comentarios de Usuarios, Opiniones y otros Envíos" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 9 | Comentarios de Usuarios, Opiniones y otros Envíos
                             </h2>
@@ -633,7 +633,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Información Personal" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 10 | Información Personal
                             </h2>
@@ -654,7 +654,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Errores, Inexactitudes y Omisiones" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 11 | Errores, Inexactitudes y Omisiones.
                             </h2>
@@ -705,7 +705,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Usos Prohibidos" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 12 | Usos Prohibidos
                             </h2>
@@ -756,7 +756,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Renuncia de Garantías; Limitación de Responsabilidad" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 13 | Renuncia de Garantías; Limitación de Responsabilidad
                             </h2>
@@ -826,7 +826,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Indemnización" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 14 | Indemnización
                             </h2>
@@ -852,7 +852,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Divisibilidad" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 15 | Divisibilidad
                             </h2>
@@ -876,7 +876,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Terminación" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 16 | Terminación
                             </h2>
@@ -921,7 +921,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Acuerdo Completo" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 17 | Acuerdo Completo
                             </h2>
@@ -963,7 +963,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Ley que Rige" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 18 | Ley que Rige
                             </h2>
@@ -981,7 +981,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Cambios en los términos de servicio" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 19 | Cambios en los términos de servicio
                             </h2>
@@ -1021,7 +1021,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Información de Contacto" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <i class="fas fa-chevron-down"></i>
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 20 | Información de Contacto
                             </h2>
@@ -1043,7 +1043,7 @@
         <div class="gp-footer">
           <div class="column logo">
             <a aria-label="Misiones Sabor Logo" href="https://misionessabor.com">
-              <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo">
+              <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo" width="175" height="94.02">
             </a>
             <div class="social-wrapper">
               <a aria-label="Instagram de Misiones Sabor" href="https://www.instagram.com/misiones_sabor" target="_blank" aria-describedby="a11y-external-message">
