--- a/products/malva-blanca.html
+++ b/products/malva-blanca.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css" type="text/css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/products.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">    
+        
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!--============================-->
@@ -91,7 +91,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid cont-navbar">
         <a aria-label="Misiones Sabor" class="navbar-brand" href="https://misionessabor.com">
-          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo">
+          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo" width="93.05" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -100,10 +100,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a aria-label="Inicio" class="nav-link active" aria-current="page" href="https://misionessabor.com">Inicio</a>
+              <a aria-label="Inicio" class="nav-link" aria-current="page" href="https://misionessabor.com">Inicio</a>
             </li>
             <li class="nav-item">
-              <a aria-label="Productos" class="nav-link" href="https://misionessabor.com/pages/shop">Productos</a>
+              <a aria-label="Productos" class="nav-link active" href="https://misionessabor.com/pages/shop">Productos</a>
             </li>
             <li class="nav-item">
               <a aria-label="Nosotros" class="nav-link" href="https://misionessabor.com/pages/about">Nosotros</a>
@@ -182,10 +182,10 @@
                         <a aria-label="Propiedades" class="collapsible">
                             <div class="ms-prd-drop-div">
                                 <div class="ms-prd-divtitle">
-                                    <i class="fa-solid fa-leaf"></i>
+                                    <img src="https://misionessabor.com/images/icons/leaf-solid.svg"></img>
                                     <h3 class="ms-prd-drop-title">Propiedades</h3>
                                 </div>
-                                <i class="fas fa-chevron-down"></i>
+                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             </div>
                         </a>
                         <div class="ms-prd-drop-content">
@@ -201,10 +201,10 @@
                         <a aria-label="Usos" class="collapsible">
                             <div class="ms-prd-drop-div">
                                 <div class="ms-prd-divtitle">
-                                    <i class="fa-solid fa-heart"></i>
+                                    <img src="https://misionessabor.com/images/icons/heart-solid.svg"></img>
                                     <h3 class="ms-prd-drop-title">Usos</h3>
                                 </div>
-                                <i class="fas fa-chevron-down"></i>
+                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             </div>
                         </a>
                         <div class="ms-prd-drop-content">
@@ -221,10 +221,10 @@
                         <a aria-label="Preparación" class="collapsible">
                             <div class="ms-prd-drop-div">
                                 <div class="ms-prd-divtitle">
-                                    <i class="fa-solid fa-mug-saucer"></i>
+                                    <i <img src="https://misionessabor.com/images/icons/mug-saucer-solid.svg"></img>
                                     <h3 class="ms-prd-drop-title">Preparación</h3>
                                 </div>
-                                <i class="fas fa-chevron-down"></i>
+                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
                             </div>
                         </a>
                         <div class="ms-prd-drop-content">
@@ -239,7 +239,7 @@
       <div class="gp-footer">
         <div class="column logo">
           <a aria-label="Misiones Sabor Logo" href="https://misionessabor.com">
-            <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo">
+            <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo" width="175" height="94.02">
           </a>
           <div class="social-wrapper">
             <a aria-label="Instagram de Misiones Sabor" href="https://www.instagram.com/misiones_sabor" target="_blank" aria-describedby="a11y-external-message">
