--- a/pages/wholesale.html
+++ b/pages/wholesale.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://misionessabor.com/styles/header.css" type="text/css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css" type="text/css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/wholesale.css" type="text/css">
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -95,7 +95,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid cont-navbar">
         <a aria-label="Misiones Sabor" class="navbar-brand" href="https://misionessabor.com">
-          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo">
+          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo" width="93.05" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,7 +104,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a aria-label="Inicio" class="nav-link active" aria-current="page" href="https://misionessabor.com">Inicio</a>
+              <a aria-label="Inicio" class="nav-link" aria-current="page" href="https://misionessabor.com">Inicio</a>
             </li>
             <li class="nav-item">
               <a aria-label="Productos" class="nav-link" href="https://misionessabor.com/pages/shop">Productos</a>
@@ -113,7 +113,7 @@
               <a aria-label="Nosotros" class="nav-link" href="https://misionessabor.com/pages/about">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a aria-label="Venta al por Mayor" class="nav-link" href="https://misionessabor.com/pages/wholesale">Venta al por mayor</a>
+              <a aria-label="Venta al por Mayor" class="nav-link active" href="https://misionessabor.com/pages/wholesale">Venta al por mayor</a>
             </li>
             <li class="nav-item">
               <a aria-label="Contacto" class="nav-link" href="https://misionessabor.com/pages/contact">Contacto</a>
@@ -226,7 +226,7 @@
       <div class="gp-footer">
         <div class="column logo">
           <a aria-label="Misiones Sabor Logo" href="https://misionessabor.com">
-            <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo">
+            <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo" width="175" height="94.02">
           </a>
           <div class="social-wrapper">
             <a aria-label="Instagram de Misiones Sabor" href="https://www.instagram.com/misiones_sabor" target="_blank" aria-describedby="a11y-external-message">
