--- a/policies/refund-policy.html
+++ b/policies/refund-policy.html
@@ -17,7 +17,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
+  
   <!--============================-->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
@@ -98,7 +98,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid cont-navbar">
         <a aria-label="Misiones Sabor" class="navbar-brand" href="https://misionessabor.com">
-          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo">
+          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="header-logo" width="93.05" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -226,7 +226,7 @@
     <div class="gp-footer">
       <div class="column logo">
         <a aria-label="Misiones Sabor Logo" href="https://misionessabor.com">
-          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo">
+          <img src="https://misionessabor.com/images/logo/LOGO-MS-ORIGINALY.svg" alt="Misiones Sabor" class="footer-logo" width="175" height="94.02">
         </a>
         <div class="social-wrapper">
           <a aria-label="Instagram de Misiones Sabor" href="https://www.instagram.com/misiones_sabor" target="_blank" aria-describedby="a11y-external-message">
